--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,21 @@
-site_name: My Docs
+site_name: MySQL 8.0 User Documentation
 theme:
   name: material
   features:
     - navigation.tracking
     - toc.integrate
+  palette:
+
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
