add nav, modify pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,12 @@
 site_name: MySQL 8.0 User Documentation
+nav: 
+  - Home: 'index.md'
+  - MySQL Data Types: 'Data_Types.md'
+  - 'Task1Ademi.md'
+  - Schemas and Tables: 'Task2Angus.md'
+  - Select Statements: 'Task3Emmy.md'
+  - Glossary: 'GlossarySB.md'
+  - Troubleshooting: 'TroubleshootingSB.md'
 markdown_extensions:
 - admonition
 - pymdownx.details
