edit index and select part

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,4 +56,4 @@ extra-css:
   - stylesheets/extra.css
 
 copyright: |
-  &copy; 2024 <a href="https://github.com/tastytough" target="_blank" rel="noopener">Angus Ng, Ademi, Emmy Nguyen</a>
+  &copy; 2024 <a href="https://github.com/tastytough" target="_blank" rel="noopener">Angus Ng, Ademi Ordobaeva, Emmy Nguyen</a>
